[gd_scene load_steps=2 format=3 uid="uid://duld53u3oiyqk"]

[ext_resource type="Script" path="res://TestingFolder/SQLtesting.gd" id="1_jqab7"]

[node name="SQLtesting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqab7")

[node name="InsertData" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 45.0
offset_right = 249.0
offset_bottom = 101.0
text = "Insert Data"

[node name="CreateTable" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 114.0
offset_right = 249.0
offset_bottom = 170.0
text = "Create Table"

[node name="SelectData" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 187.0
offset_right = 249.0
offset_bottom = 243.0
text = "Select Data"

[node name="UpdataData" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 260.0
offset_right = 249.0
offset_bottom = 316.0
text = "Update Data"

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 333.0
offset_right = 249.0
offset_bottom = 389.0
text = "Delete Data"

[node name="CustomSelect" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 402.0
offset_right = 249.0
offset_bottom = 458.0
text = "Select Custom Data
"

[node name="FormElements" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 267.0
offset_top = 48.0
offset_right = 571.0
offset_bottom = 144.0

[node name="Element1" type="Control" parent="FormElements"]
layout_mode = 1
anchors_preset = 0
offset_right = 297.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="FormElements/Element1"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 73.0
grow_vertical = 2
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsertName" type="TextEdit" parent="FormElements/Element1"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Please insert a name"

[node name="Element2" type="Control" parent="FormElements"]
layout_mode = 1
anchors_preset = 0
offset_top = 48.0
offset_right = 297.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="FormElements/Element2"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 73.0
grow_vertical = 2
text = "Score
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsertScore" type="TextEdit" parent="FormElements/Element2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Please insert a score"

[connection signal="pressed" from="InsertData" to="." method="_on_insert_data_pressed"]
[connection signal="pressed" from="CreateTable" to="." method="_on_create_table_pressed"]
[connection signal="pressed" from="SelectData" to="." method="_on_select_data_pressed"]
[connection signal="pressed" from="UpdataData" to="." method="_on_updata_data_pressed"]
[connection signal="pressed" from="DeleteData" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="CustomSelect" to="." method="_on_custom_select_pressed"]
